--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- And here is our main footer that is used across all the pages of our website -->
 
     <footer>
-      <p>©Copyright 2019 by We Care. All rights reversed.</p>
+      <p>©Copyright 2019 by We Care About. All rights reversed.</p>
     </footer>
 
   </body>
