--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+
+<!--
+To implement such semantic mark up, HTML provides dedicated tags that you can use to represent such sections, for example:
+header: <header>.
+navigation bar: <nav>.
+main content: <main>, with various content subsections represented by <article>, <section>, and <div> elements.
+sidebar: <aside>; often placed inside <main>.
+footer: <footer>.
+-->
+
 <html>
   <head>
     <meta charset="utf-8">
