--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ footer: <footer>.
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
     
+    <style>
+      body {
+        background:gray;
+      }
+      h1 {
+        color:pink;
+      }
+    </style>
+    
   </head>
 
   <body>
