--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ footer: <footer>.
         background:gray;
       }
       h1 {
-        color:pink;
+        color:purple;
       }
     </style>
     
