--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ footer: <footer>.
     
     <style>
       body {
-        background:purple;
+        background:gray;
       }
       h1 {
-        color:gray;
+        color:purple;
       }
     </style>
     
